Rotate annotation to match page when setting annotation's properties

BUG:318828
REVIEW:110229